src/regression_tests/snapshots/nixfmt_rs__regression_tests__ir__list_rendering-3.snap
---
source: src/regression_tests/ir.rs
description: "[ # c\n]"
---
[0;95;1m[[0m Group RegularG
    [0;96;1m[[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m[[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing Hardline
    [0;96;1m,[0m Text [0;92;1m1[0m [0;92;1m0[0m TrailingComment [0;97;1m"[0m[0;94;1m# c[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing Hardline
    [0;96;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m][0m[0;97;1m"[0m
    [0;96;1m][0m
[0;95;1m][0m
